--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "charts",
     "2d",
     "3d",
-    "threejs",
+    "threejs"
   ],
   "author": "Kevin R. Whitley <kevin3503@gmail.com>",
   "license": "NONE",
